<resources>
    <string name="app_name" translatable="false"> Focus </string>

    <string name="mode_focus" > Focus </string>
    <string name="mode_break" > Break </string>
    <string name="mode_long_break" > Long Break </string>

    <string name="timer_label_focus" > %1$s session </string>
    <string name="timer_default_time" translatable="false"> 25:00 </string>

    <string name="sessionsCount" > %1$d sessions completed </string>

    <string name="btn_start"> Start </string>
    <string name="btn_pause"> Pause </string>
    <string name="btn_resume"> Resume </string>

    <string name="quote"> "Concentration is the root of all the higher abilities in man." — Bruce Lee </string>

    <string name="btn_history"> History </string>
    <string name="btn_preferences"> Preferences </string>

    <string name="title_history"> Preferences </string>

    <string name="history_filter_all"> All </string>
    <string name="history_filter_week"> This week </string>
    <string name="history_filter_today"> Today </string>

    <string name="history_empty_icon" >🎯</string>
    <string name="history_empty_title" > No sessions recorded </string>
    <string name="history_empty_desc" > Start your first session! </string>

    <string name="session_count" > %1$d sessions </string>
    <string name="title_preferences">Preferences</string>

    <!-- Plurals: contador de sesiones en historial -->
    <plurals name="session_count_plural">
        <item quantity="one">%d session</item>
        <item quantity="other">%d sessions</item>
    </plurals>

    <string name="theme_preference_key" translatable="false">com.example.focuspilar.THEME_PREFERENCE_KEY</string>
    <string name="lang_preference_key" translatable="false">com.example.focuspilar.LANG_PREFERENCE_KEY</string>
    <string name="theme_light_id" translatable="false">light</string>
    <string name="theme_dark_id" translatable="false">dark</string>
</resources>